# ROS

./: .gitignore  .pylintrc  frames.gv  mercinary_data.txt  readme.md  requirements.txt  tmp.txt
.github/workflows/: python-lint-and-format.yml
docs/: Untitled Diagram.drawio  report.md
docs/graph/: graph.drawio
src/combined/: CMakeLists.txt  package.xml
src/combined/launch/: amcl_simulation.launch  find_cylinder.launch  homework6.launch  rins_world.launch  start.launch
src/combined/maps/: map1.yaml  map2.yaml
src/combined/msg/: CylinderGreetInstructions.msg  DetectedRings.msg  MyStatus.msg  UniqueFaceCoords.msg  UniqueRingCoords.msg
src/combined/scripts/: arm_manager.py  brain.py  cylinder_detector.py  cylinder_manager.py  dialogue.py  face_detector.py  face_localizer_google.py  face_manager.py  gring_detector_ground.py  ground_ring_detector.py  ground_ring_manager.py  laser_manager.py  map_manager.py  mercenary.py  move_arm.py  ring_detector.py  ring_detectory.py  ring_manager.py  sound.py  utils.py
src/combined/src/: cylinder_detector.cpp
src/combined/srv/: IsPoster.srv
src/combined/worlds/: final.world  rins.world  rins_task2.world
src/ex1/: CMakeLists.txt  package.xml
src/ex1/msg/: CustomMessage.msg
src/ex1/src/: add_ten_ints_client.py  add_ten_ints_server.py  publisher.py  subscriber.py
src/exercise2/: CMakeLists.txt  package.xml
src/exercise2/launch/: custom.launch
src/exercise2/src/: turtle_move.py
src/exercise2/srv/: TurtleMove.srv
src/exercise3/: CMakeLists.txt  package.xml
src/exercise3/launch/: amcl_simulation.launch  start.launch
src/exercise3/maps/: map1.yaml
src/exercise3/src/: goals.py  map_goals.cpp
src/exercise4/: package.xml
src/exercise4/scripts/: face_localizer_dlib  face_localizer_dnn  move_base_client.py  skeleton.py
src/exercise5/turtlebot_custom_navigation/param/: costmap_common_params.yaml
src/exercise6/: CMakeLists.txt  package.xml
src/exercise6/msg/: RingGreetInstructions.msg  UniqueFaceCoords.msg
src/exercise6/src/: cylinder_detector.cpp
src/exercise6/srv/: ColorSrv.srv
src/exercise7/scripts/: move_arm.py
src/exercise7/worlds/: rins.world
src/main/project/: CMakeLists.txt  package.xml
src/main/project/launch/: amcl_simulation.launch  homework6.launch  start.launch
src/main/project/maps/: map1.pgm
src/main/task1/: CMakeLists.txt  package.xml
src/main/task1/launch/: amcl_real.launch  start.launch  startreal.launch
src/main/task1/maps/: h.pgm  h.yaml  map1.yaml
src/main/task1/msg/: DetectedFaces.msg  UniqueFaceCoords.msg
src/main/task1/scripts/: brain.py  face_localizer_dnn  face_localizer_dnn.py  face_localizer_google.py  map_manager.py  skeleton.py  sound.py
src/main/turtlebot_custom_navigation/launch/: amcl_simulation.launch
src/main/turtlebot_custom_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
